--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="section-hero">
+            <div class="container grid grid-two--cols">
+                <div class="section-hero-content">
+                    <p class="sub-heading"></p>
+                    <h1 class="main-heading">Start Your Learning With Academix!!</h1>
+                    <br>
+                    <br>
+                    <p class="main-paragraph">
+                        "Welcome to <strong>Academix</strong>, your ultimate learning hub! Whether you're a student, teacher, or lifelong learner, we provide high-quality educational resources, interactive lessons, and expert guidance to help you succeed. Explore a wide range of subjects, sharpen your skills, and unlock new opportunities—all in one place. Start your learning journey today!"
+                    </p>
+                    <br>
+                    <div class="main-btn">
+                        <a href="services.html" class="btn">Learn with Us</a>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <figure>
+                        <img src="final.jpg" alt="person" width="70%" height="60%">
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
