--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- navigation bar-->
     <header class="navbar-section">
         <div class="container">
             <div class="logo-image">
@@ -28,7 +29,9 @@
             </div>
         </div>
     </header>
+    <!-- home page -->
     <main>
+       
         <div class="section-hero">
             <div class="container grid grid-two--cols">
                 <div class="section-hero-content">
@@ -59,6 +62,54 @@
             </svg>
         </div>
     </main>
+
+
+    <!-- about section -->
+    <section class="section-about">
+    <div class="contain">
+    <h2 class="section-common-heading"> About Academix</h2>
+    <p class="section-commom-subheading">Guiding Your journey through Research, Design, and Development Excellence. </p>
+    </div>
+    <div class="container grid grid-three--cols">
+        <div class="about-div">
+            <div class="icon">
+                <img src="icon2.jpg" alt="research icon" height="70%" width="70%">
+            </div>
+            <h3 class="section-common-tittle">Research</h3>
+            <p class="section-common-para">
+                "Research is the foundation of innovation. At Academix, we encourage curiosity and critical thinking, helping learners explore new ideas, analyze trends, and develop solutions backed by data and insights." </p>
+        </div>
+        <div class="about-div">
+            <div class="icon">
+                <img src="deicon.jpg" alt="research icon">
+            </div>
+            <h3 class="section-common-tittle">Design</h3>
+            <p class="section-common-para">
+                "Design brings ideas to life with creativity and usability. At Academix, we help learners craft visually appealing and user-friendly designs that enhance user experience."</p>
+        </div>
+        <div class="about-div">
+            <div class="icon">
+                <img src="web.jpg" alt="research icon" height="80%" width="80%">
+            </div>
+            <h3 class="section-common-tittle">Development</h3>
+            <p class="section-common-para">
+                "Development turns ideas into reality. At Academix, we equip learners with coding skills, best practices, and hands-on experience to build robust, efficient, and scalable digital solutions for the modern world." </p>
+        </div>
+    </div>
+    </section>
+
+
+    <!-- course section -->
+    <section class="section-about">
+    <div class="container">
+    <div class="section-common-heading"> 
+
+    </div>
+    <div class="section-commom-subheading">
+
+    </div>
+    </div>
+    </section>
     
 </body>
 </html>
