--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educational Hub</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -100,14 +101,89 @@
 
 
     <!-- course section -->
-    <section class="section-about">
-    <div class="container">
-    <div class="section-common-heading"> 
-
+    <section class="section-course">
+    <div class="contain">
+    <h2 class="section-common-heading"> Explore Our Courses </h2>
+    <p class="section-commom-subheading">
+      Discover a varity of courses across diffrent categories
+    </p>
     </div>
-    <div class="section-commom-subheading">
+    <div class="container grid grid-four--cols">
+        <div class="course-div">
+            <div class="icon2">
+               <i><i class="fa-solid fa-code"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">HTML</h3>
+            <p class="section-common-para">
+                Learn HTML to build the structure of modern web pages and kickstart your web development journey.</p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-css3-alt"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">CSS</h3>
+            <p class="section-common-para">
+                Master CSS to create stunning, responsive designs with layouts, animations, and modern styling.
 
-    </div>
+            </p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-js"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">Javascript</h3>
+            <p class="section-common-para">
+                Learn JavaScript to add interactivity, dynamic features, and logic to web applications.</p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-python"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">Python</h3>
+            <p class="section-common-para">
+                Dive into Python for web development, automation, and data handling with real-world applications. </p>
+        </div>
+
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-react"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">React</h3>
+            <p class="section-common-para">
+                Learn React to build fast, scalable web apps with components, state management, and hooks.</p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-php"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">PHP</h3>
+            <p class="section-common-para">
+                Learn PHP to build dynamic web applications, handle forms, and interact with databases. </p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-solid fa-database"></i>
+            </i>
+            </div>
+            <h3 class="section-common-tittle">SQL</h3>
+            <p class="section-common-para">Understand SQL to manage and query databases efficiently using MySQL and other DBMS.</p>
+        </div>
+        <div class="course-div">
+            <div class="icon2">
+                <i class="fa-brands fa-java"></i>
+
+            </i>
+            </div>
+            <h3 class="section-common-tittle">Java</h3>
+            <p class="section-common-para">
+                Explore Java for software development, web apps, and Android, mastering OOP and core concepts. </p>
+        </div>
     </div>
     </section>
     
